# jdi

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements-wakeword-linux.txt  requirements-wakeword.txt  requirements.txt
.github/workflows/: ci.yml  master.yml
android-app/: README.md  build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/assets/: default-config.json
android-app/app/src/main/java/com/sachinmeier/jdivoiceandroid/: AppContainer.kt  JdiVoiceApplication.kt
android-app/app/src/main/java/com/sachinmeier/jdivoiceandroid/audio/: AudioRecorderSource.kt
android-app/app/src/main/java/com/sachinmeier/jdivoiceandroid/config/: AppConfig.kt  CommandMatcher.kt  (+2 more)
android-app/app/src/main/res/layout/: activity_config.xml  activity_main.xml
android-app/app/src/main/res/values/: strings.xml  themes.xml
configs/: example.yaml
docs/: android-app-plan.md  architecture.md  project-plan.md  voice-tuning.md
scripts/: setup_env.py
src/jdi_voice/: __init__.py  audio.py  cli.py  config.py  controller.py  gpio.py  logging_config.py  phrase_matcher.py  push_to_talk.py  recognition.py  service.py  wakeword.py
src/jdi_voice/lifx/: __init__.py  http_client.py  lan_client.py  models.py
systemd/: jdi.service
tests/: test_cli.py  test_config.py  test_controller.py  test_http_client.py  test_lan_client.py  test_lifx_models.py  test_phrase_matcher.py  test_project_assets.py  test_service.py  test_wakeword.py
(+16 files in other folders)
